Update LaTeX report structure and remove obsolete result files

--- a/report/latex/my_report.tex
+++ b/report/latex/my_report.tex
@@ -59,19 +59,20 @@
 \newpage
 
 \section{Introduction}
-Airline crew scheduling is one of the most challenging and significant optimisation problems in transportation. Typically modeled as a Set Partitioning Problem (SPP), the task involves assigning each flight leg to a valid crew rotation while meeting numerous operational constraints. Due to the enormous combinatorial complexity of real-world instances, exact methods often fall short, spurring the development of advanced metaheuristic techniques capable of delivering near-optimal solutions within reasonable time. In this project, we explore these techniques to not only overcome scalability issues but also to enhance solution robustness. Our investigation provides valuable insights into how problem-specific enhancements can significantly improve search performance and constraint handling. The methodologies presented here are expected to inform future research and practical applications in scheduling and other combinatorial optimisation problems.
+Airline crew scheduling is an important optimisation problem, often framed as a Set Partitioning Problem (SPP). In this setup, each flight leg must be assigned to exactly one valid crew rotation, while satisfying various operational constraints. Since the number of possible assignments grows rapidly with problem size, purely exact methods can struggle to scale, especially for real-world scenarios. This has led researchers and practitioners to explore a range of metaheuristic algorithms that offer practical, near-feasible (and often near-optimal) solutions within reasonable time.
 
-In this project, we implement three algorithms from scratch:
+In this project, we implement three such algorithms from scratch:
 \begin{itemize}
     \item \textbf{Simulated Annealing (SA)}
     \item \textbf{Standard Binary Genetic Algorithm (BGA)}
     \item \textbf{Improved Binary Genetic Algorithm (BGA)}
 \end{itemize}
-The improved variant, inspired by Chu \& Beasley~\cite{ChuAndBeasley1998} and Runarsson and Yao~\cite{RunarssonYao2000}, integrates problem-specific enhancements—such as pseudo–random initialization, heuristic improvement operators, and stochastic ranking—to better handle constraints. We demonstrate the efficiency of these approaches on three OR–Library test instances (sppnw41, sppnw42, and sppnw43) over 30 independent runs and provide a detailed comparative analysis of their performance and convergence behavior. Our work aims to offer valuable technical insights into applying metaheuristic techniques to complex, real-world scheduling problems.
+
+The improved version draws on ideas from Chu and Beasley~\cite{ChuAndBeasley1998} and Runarsson and Yao~\cite{RunarssonYao2000}, including pseudo--random initialization, heuristic improvement operators, and stochastic ranking for constraint handling. We test our methods on three OR--Library instances (sppnw41, sppnw42, sppnw43) over 30 independent runs, and then compare their performance in terms of feasibility, solution cost, and overall robustness. Our main objective is to investigate how these metaheuristic techniques manage the challenges of the SPP, while providing clear examples of how problem-specific enhancements can boost efficiency and constraint satisfaction.
 
 \section{Algorithm Descriptions}
 \label{sec:algorithms}
-In this section, we provide a comprehensive overview of the three algorithms developed for solving the SPP. For each algorithm, we begin with a brief introduction that outlines its underlying principles and technical merits, followed by the corresponding pseudocode. Detailed flowcharts, which visually encapsulate the step-by-step processes, are presented on subsequent pages. We also discuss the rationale behind key design choices and the expected impact of the various algorithmic enhancements. This thorough explanation is intended to clarify both the operational mechanics and the innovative aspects of our methods. Ultimately, our goal is to bridge the gap between theoretical concepts and practical implementation, offering a clear roadmap for future research in this area.
+In this section, we provide a comprehensive overview of the three algorithms developed for solving the SPP. For each algorithm, we begin with a brief introduction that outlines its underlying principles and technical merits, followed by the corresponding pseudocode. Detailed flowcharts, which visually encapsulate the step-by-step processes, are presented on subsequent pages. This thorough explanation is intended to clarify both the operational mechanics and the innovative aspects of our methods. Ultimately, our goal is to bridge the gap between theoretical concepts and practical implementation.
 
 \subsection{Simulated Annealing (SA)}
 Simulated Annealing is a local search technique that iteratively improves a candidate solution by exploring its neighbourhood. It uses a temperature parameter to probabilistically accept inferior solutions, thereby enabling the algorithm to escape local optima. This simple yet effective approach balances exploration and exploitation through gradual cooling.
